--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -1,8 +1,8 @@
 @import "./settings";
-@import "./components/nav.module";
-@import "./components/home";
-@import "./components/versions";
-@import "./components/login";
+// @import "./components/nav.module";
+// @import "./components/home";
+// @import "./components/versions";
+// @import "./components/login";
 
 
 
