--- a/frontend/src/Pages/chat/Chat.scss
+++ b/frontend/src/Pages/chat/Chat.scss
@@ -1,7 +1,7 @@
-.navbar {
+.navSpace {
 
     width: 100%;
-    height: 10vh;
+    height: 64px;
 
     background-color: rgb(0, 0, 0);
 
@@ -12,7 +12,7 @@
     width: 100%;
 
     // valeur = hauteur 100vh - hauteur navbar
-    height: 90vh;
+    height:  calc(100vh - 64px);
     //
 
         background-image: url('https://images.ctfassets.net/3mv54pzvptwz/6eyCiDiWfBlMbGe4JK4zeH/b5ece047802553d30c885d47ee3a797b/background_njr10.jpg');
