--- a/frontend/src/Pages/chat/Chat.scss
+++ b/frontend/src/Pages/chat/Chat.scss
@@ -15,8 +15,7 @@
     height: calc(100vh - 64px);
     //
 
-    background-image: url('https://images.ctfassets.net/3mv54pzvptwz/6eyCiDiWfBlMbGe4JK4zeH/b5ece047802553d30c885d47ee3a797b/background_njr10.jpg');
-    // background-color: rgb(0, 0, 54);
+    background-color: rgb(30, 30, 30);
 
     display: flex;
     flex-direction: row;
@@ -25,20 +24,22 @@
     .side {
 
         // margin-left: 30%;
-        backdrop-filter: blur(30px);
         height: 100%;
-        width: 323px;
+        width: 320px;
+        min-width: 320px;
 
-        background-color: rgb(0, 0, 0, 0.70);
+        background-color: rgb(42, 38, 48);
 
         color: white;
 
         .newConvContainer {
             display: flex;
-            backdrop-filter: blur(30px);
             height: 10%;
             border-radius: 25px;
-            width: 100%;
+            width: 90%;
+
+            margin-block: 3%;
+            margin-inline: auto;
 
             height: 30px;
             // height: 8%;
@@ -48,7 +49,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background-color: rgb(0, 0, 0, 0.5);
+            background-color: rgb(53, 49, 59);
 
             .newConvInput {
                 // margin-left: 4%;
@@ -101,20 +102,22 @@
                         -webkit-line-clamp: 2;
                         -webkit-box-orient: vertical;
                     }
-
                 }
             }
 
             .activeStartedConvItem {
-                width: 100%;
-                height: 80px;
+                width: 94%;
+                height: 65px;
+                margin-inline: auto;
                 display: flex;
                 align-items: center;
-                background-color: rgb(0, 0, 0, 0.6);
+                background-color: rgb(0, 135, 255);
+
+                border-radius: 5px;
 
                 .sideAvatar {
                     margin-inline: 2%;
-
+                    margin-left: 17px;
                 }
 
                 .startedConvText {
@@ -157,9 +160,9 @@
             justify-content: start;
             align-items: center;
             text-align: center;
+            // color: grey;
 
-            background-color: rgb(0, 0, 0, 0.4);
-            backdrop-filter: blur(30px);
+            background-color: rgb(54, 51, 57);
 
             .mainTitle {
                 display: flex;
@@ -172,6 +175,7 @@
 
             .openConvName {
                 margin-left: 1%;
+                background-color: red;
             }
 
             .buttons {
@@ -189,7 +193,7 @@
             // background-color: rgb(0, 0, 0);
 
             .messagesDisplay {
-                height: 90%;
+                height: calc(94% - 2px);
                 width: 100%;
                 overflow: scroll;
                 display: flex;
@@ -202,18 +206,22 @@
                     margin-top: 1px;
                     margin-bottom: 1px;
                     padding: 5px;
+                    // padding-block: 3px;
 
                     width: fit-content;
                     min-width: 50px;
                     max-width: 65%;
+
+                    font-size: small;
+                    font-weight: bold;
 
                     text-align: left;
 
                     // overflow: auto;
 
                     height: max-content;
-                    background-color: rgb(0, 0, 0, 0.7);
-                    border-radius: 10px;
+                    background-color: rgb(0, 145, 245);
+                    border-radius: 15px;
                     border-bottom-right-radius: 0;
 
                     word-break: break-all;
@@ -246,8 +254,11 @@
             .messageInput {
                 display: flex;
                 backdrop-filter: blur(30px);
-                height: 10%;
+                height: 4%;
+                width: 95%;
                 border-radius: 25px;
+                border: 1px solid white;
+                margin-inline: auto;
 
                 input {
                     width: 100%;
