--- a/frontend/src/components/chat/Side.scss
+++ b/frontend/src/components/chat/Side.scss
@@ -18,16 +18,13 @@
     margin-inline: auto;
 
     height: 30px;
-    // height: 8%;
-
-    // background-color: red;
 
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: rgb(53, 49, 59);
 
-    .newConvInput {
+    .searchBar {
       // margin-left: 4%;
       // font-size: small;
       // color: grey;
